# engram

./: .gitignore  Cargo.toml  README.md  justfile  package.json
.github/workflows/: ci.yml  demo.yml  deploy-web.yml  release-npm.yml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  index.css
apps/web/src/components/: CopyButton.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  StarCount.test.tsx  StarCount.tsx  Terminal.tsx
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: claude.rs  codex.rs  lib.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: lib.rs
crates/engram-inject/: Cargo.toml
crates/engram-inject/src/: lib.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: lib.rs
crates/engram-store/: Cargo.toml
crates/engram-store/src/: lib.rs
crates/recall-capture/: Cargo.toml
crates/recall-capture/src/: curate.rs  extract.rs  lib.rs
crates/recall-cli/: Cargo.toml
crates/recall-cli/src/: lib.rs  main.rs
crates/recall-core/: Cargo.toml
crates/recall-core/src/: convention.rs
crates/recall-inject/: Cargo.toml
crates/recall-inject/src/: context.rs  lib.rs
crates/recall-mcp/: Cargo.toml
crates/recall-mcp/src/: lib.rs
crates/recall-store/: Cargo.toml
crates/recall-store/src/: lib.rs
docs/: demo.tape
docs/superpowers/plans/: 2026-06-28-engram-core-mcp.md  2026-06-28-engram-plan0-monorepo-scaffold.md  2026-06-28-engram-plan2-agent-cli-capture.md  2026-06-28-engram-plan3-plugin-packaging.md  2026-06-28-engram-plan4-release-pipeline.md
docs/superpowers/specs/: 2026-06-28-engram-convention-brain-design.md
