[package]
name = "engram-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
engram-core = { path = "../engram-core" }
engram-store = { path = "../engram-store" }
engram-inject = { path = "../engram-inject" }
rmcp = { version = "1.8", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
